<resources>
    <string name="app_name">即构答题</string>
    <string name="ongoing_title">节目正在进行</string>
    <string name="today">今天</string>
    <string name="bonus">奖金</string>
    <string name="unit">万</string>
    <string name="my_bonus">我的奖金</string>
    <string name="week_ranking">本周排名</string>
    <string name="bonus_units">￥</string>
    <string name="resurrection">复活卡</string>
    <string name="invite_friends">邀请好友</string>
    <string name="rule_description">规则说明</string>
    <string name="ranking_list">排行榜</string>
    <string name="go_watch">点击观看</string>
    <string name="comments">参与评论</string>
    <string name="enter_room">输入房间</string>
    <string name="refresh">刷新</string>
    <string name="contact_us">联系我们</string>
    <string name="contact_remind">您好,分享失败!请安装QQ后再试</string>
    <string name="congratulations_on_the_following_winners">恭喜以下获胜者</string>
    <string name="log_look">查看日志</string>
    <string name="log">日志</string>
    <string name="update_log">上传日志</string>
    <string name="update_log_ok">上传日志成功</string>
    <string name="winning_bonus">闯关成功</string>
    <string name="congratulations_getting_cash_bonus">恭喜获得现金奖励</string>
    <string name="there_is_no_data_at_the_moment">当前没有房间</string>
    <string name="exit_the_answer_reminder">答题中退出会错过下一题哦,还是先完成答题吧</string>
    <string name="exit_the_answer">退出答题</string>
    <string name="continue_the_answer">继续答题</string>
    <string name="zg_checkbox_use_test_env">使用测试环境</string>
    <string name="zg_text_app_flavor">App版本</string>
    <string name="zg_text_app_id">应用 Id: </string>
    <string name="zg_text_app_key">应用签名: </string>
    <string name="zg_text_user_id">用户 Id: </string>
    <string name="zg_text_user_name">用户名: </string>
    <string name="zg_text_app_flavor_china">国内版</string>
    <string name="zg_text_app_flavor_intl">国际版</string>
    <string name="zg_text_app_flavor_customize">自定义</string>
    <string name="zg_text_sdk_version">SDK版本号: </string>
    <string name="zg_app_title">直播答题(%1$s)</string>
    <string name="zg_tip_parameter_illegal">参数非法</string>
    <string name="zg_tip_appid_format_illegal">应用 Id 格式非法</string>
    <string name="zg_tip_appkey_must_32_bits">AppKey 必须为32位</string>
    <string name="settings">设置</string>
    <string name="about">关于我们</string>
    <string name="it_is_not_a_valid_32_bits">不是有效的32位Key,修改失败</string>
</resources>
