<?xml version="1.0" encoding="utf-8"?>
<layout>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- 背景 -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/background" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/logo_bottom"
                android:layout_marginTop="@dimen/logo_top"
                android:background="@mipmap/logo" />

            <TextView
                android:id="@+id/prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bottom_view"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:text="@string/there_is_no_data_at_the_moment"
                android:textColor="@color/color_white" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/room_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottom_view"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="@dimen/dimen_25dp"
                android:layout_marginRight="@dimen/dimen_25dp"
                android:layout_marginTop="@dimen/dimen_20dp" />


            <RelativeLayout
                android:id="@+id/bottom_view"
                android:layout_width="@dimen/dimen_325dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dimen_25dp"
                android:layout_marginRight="@dimen/dimen_25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/settings"
                    android:layout_width="@dimen/dimen_148dp"
                    android:layout_height="@dimen/dimen_44dp"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@drawable/homepage_bottom"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/font_14sp" />

                <Button
                    android:id="@+id/refresh"
                    android:layout_width="@dimen/dimen_148dp"
                    android:layout_height="@dimen/dimen_44dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@drawable/homepage_bottom"
                    android:gravity="center"
                    android:text="@string/refresh"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/font_14sp" />


            </RelativeLayout>


        </RelativeLayout>


    </FrameLayout>
</layout>
